--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,9 @@
   padding: 0;
   box-sizing: border-box;
 
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #333;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   letter-spacing: 0.1rem;
   line-height: 1.5;
 }
@@ -14,4 +16,16 @@ html,
 body {
   width: 100%;
   height: 100%;
+}
+
+body {
+  background-color: rgb(249, 249, 249);
+}
+
+:root {
+  --max-width: 1280px;
+}
+
+a {
+  text-decoration: none;
 }
