--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
   padding: 0;
   box-sizing: border-box;
 
-  color: #333;
+  color: var(--font-color);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   letter-spacing: 0.1rem;
@@ -19,11 +19,24 @@ body {
 }
 
 body {
-  background-color: rgb(249, 249, 249);
+  background-color: var(--primary-color);
 }
 
 :root {
   --max-width: 1280px;
+
+  --font-color: #333;
+  --primary-color: rgb(245, 245, 245);
+  --secondary-color: snow;
+  --placeholder: #858585;
+
+}
+
+.dark {
+  --font-color: snow;
+  --primary-color: #192734;
+  --secondary-color: #22303c;
+  --placeholder: #f9f9f9;
 }
 
 a {
