--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,7 +1,7 @@
 .navbar {
   width: 100%;
   padding: 1rem 2rem;
-  background-color: snow;
+  background-color: var(--secondary-color);
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -16,4 +16,13 @@
 .title {
   font-size: clamp(20px, 4vw, 24px);
   letter-spacing: normal;
+}
+
+.toggle {
+  background-color: transparent;
+  border: none;
+  font-size: 1rem;
+  display: flex;
+  gap: 0.5rem;
+  cursor: pointer;
 }
