--- a/src/components/Select/select.module.css
+++ b/src/components/Select/select.module.css
@@ -5,9 +5,8 @@
 .arrow {
   position: absolute;
   right: 12px;
-  top: calc(50% - 3px);
-  width: 10px;
-  height: 6px;
+  top: calc(50% - 10px);
+  width: 20px;
   stroke-width: 2px;
   stroke: #9098a9;
   fill: none;
@@ -48,14 +47,6 @@
   box-shadow: 0 0 0 2px rgba(0, 119, 255, 0.2);
 }
 
-.select:hover + .arrow {
+.select:hover + div .arrow {
   stroke: #07f;
-}
-
-.sprites {
-  position: absolute;
-  width: 0;
-  height: 0;
-  pointer-events: none;
-  user-select: none;
 }
