--- a/src/components/Loading/loading.module.css
+++ b/src/components/Loading/loading.module.css
@@ -1,9 +1,10 @@
 .preloader {
   position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: calc(100% - 100px);
+  bottom: calc(50% - 7.5vh);
+  left: 50%;
+  width: fit-content;
+  height: fit-content;
+  transform: translate(-50%, -50%);
 }
 .loader {
   display: block;
